# make-cocos-icon

./: README.md  fmt.cmd  main.py  pkg.bat  pkg.sh  pyproject.toml
.github/workflows/: release.yml
src/: __init__.py  __version__.py  app.py  consts.py
