[project]
name = "make-cocos-icon"
version = "0.3.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nuitka>=2.8.4",
    "pillow>=12.1.1",
]

[tool.ruff]
line-length = 108

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.black]
line-length = 108
target-version = ['py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 48

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.9.0",
    "isort>=7.0.0",
    "ruff>=0.14.1",
]
